Bug 451482 - System Tray settings doesn't show any entry in the list
Summary: System Tray settings doesn't show any entry in the list
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 451457 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-14 07:42 UTC by Fushan Wen
Modified: 2022-03-16 02:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
empty list.png (62.29 KB, image/png)
2022-03-14 07:42 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-03-14 07:42:39 UTC
Created attachment 147488 [details]
empty list.png

SUMMARY
The list of entries in System Tray settings is empty after recent updates.


STEPS TO REPRODUCE
1. Open System Tray settings by right-clicking system tray and select "Configure System Tray".
2. Select "Entries" in the sidebar 

OBSERVED RESULT
The list is empty

EXPECTED RESULT
The list is not empty

SOFTWARE/OS VERSIONS
Information for package plasma5-workspace:
------------------------------------------
Repository     : @System
Name           : plasma5-workspace
Version        : 5.24.80git.20220313T173134~5fbe1eabd-ku.56.1
Arch           : x86_64
Vendor         : obs://build.opensuse.org/KDE:Unstable
Installed Size : 27.2 MiB
Installed      : Yes
Status         : up-to-date
Source package : plasma5-workspace-5.24.80git.20220313T173134~5fbe1eabd-ku.56.1.src
Upstream URL   : http://www.kde.org/
Summary        : The KDE Plasma Workspace Components
Comment 1 Fushan Wen 2022-03-14 07:50:28 UTC
3月 14 15:49:00 ZHAN66 plasmashell[19959]: Could not find the Plasmoid for QQuickListView_QML_2893(0x55ad58922b90) QQmlContext(0x55ad524f1080) QUrl("")
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/share/plasma/shells/org.kde.plasma.desktop/contents/configuration/ConfigurationAppletPage.qml:38:5: QML Loader: Binding loop detected for property "height"
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/share/plasma/shells/org.kde.plasma.desktop/contents/configuration/ConfigurationAppletPage.qml:38:5: QML Loader: Binding loop detected for property "height"
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/share/plasma/plasmoids/org.kde.plasma.private.systemtray/contents/ui/ConfigEntries.qml:68: TypeError: Cannot read property 'configSystemTrayModel' of undefined
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/lib64/qt5/qml/org/kde/kirigami.2/private/globaltoolbar/BreadcrumbControl.qml:17:5: Unable to assign [undefined] to QQuickItem*
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/lib64/qt5/qml/org/kde/kirigami.2/private/globaltoolbar/BreadcrumbControl.qml:17:5: Unable to assign [undefined] to QQuickItem*
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/lib64/qt5/qml/org/kde/kirigami.2/private/globaltoolbar/BreadcrumbControl.qml:17:5: Unable to assign [undefined] to QQuickItem*
Comment 2 Nate Graham 2022-03-14 13:23:37 UTC
3月 14 15:49:00 ZHAN66 plasmashell[19959]: file:///usr/share/plasma/plasmoids/org.kde.plasma.private.systemtray/contents/ui/ConfigEntries.qml:68: TypeError: Cannot read property 'configSystemTrayModel' of undefined

Regression from https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1518. Can't ship 5.25 this way; marking as VHI.
Comment 3 Aleix Pol 2022-03-14 21:35:09 UTC
Git commit 0dcf909b375a0b23d2f3e8534c460701c6e477f7 by Aleix Pol.
Committed on 14/03/2022 at 14:48.
Pushed by ngraham into branch 'master'.

Fix Plasmoid attached property look-up on Config objects

At the moment we were only keepy track of them for the applets
themselves and propagating the context property.

Instead, now we are storing the value in the root context and pulling it
from there for every object. We are doing it too for Config files right
where we are also forwarding the context property.

This changes how the context property is stored by using dynamic
properties in the context object instead of a global hash. This has the
advantage of doing without a global vector that is getting accessed from
different places.

M  +3    -8    src/plasmaquick/appletquickitem.cpp
M  +1    -0    src/plasmaquick/configview.cpp
M  +0    -2    src/plasmaquick/private/appletquickitem_p.h

https://invent.kde.org/frameworks/plasma-framework/commit/0dcf909b375a0b23d2f3e8534c460701c6e477f7
Comment 4 Fushan Wen 2022-03-16 02:18:33 UTC
*** Bug 451457 has been marked as a duplicate of this bug. ***